opam-version: "2.0"
maintainer:   "rudi.grinberg@gmail.com"
authors:      ["Rudi Grinberg"]
license:      "ISC"
synopsis: "Curly is a brain dead wrapper around the curl command line utility"
homepage:     "https://github.com/rgrinberg/curly"
dev-repo:     "git+https://github.com/rgrinberg/curly.git"
bug-reports:  "https://github.com/rgrinberg/curly/issues"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
depends: [
  "dune" {>= "1.0"}
  "base-unix"
  "result"
  "ocaml" { >= "4.02.3"} 
  "cohttp-lwt-unix" {with-test}
  "odoc" {with-doc}
]
